# netbox-ceph

./: 404.html  AGENTS.md  CERTIFICATION.md  CLAUDE.md  COMPATIBILITY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.gitea/workflows/: ci.yml  deploy-production.yml
.github/workflows/: ci.yml  docs-screenshots.yml  e2e.yml  page-coverage.yml  publish-pypi.yml
api/: index.html
certification/: index.html
docs/: api.md  certification.md  index.md  installation.md  models.md  sync.md
docs/release-notes/: ceph-v2-foundation.md  index.md  version-0.0.1.post1.md
docs/v2/: desired-state.md  operations.md  overview.md  plan-apply.md  providers.md
installation/: index.html
models/: index.html
netbox_ceph/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  navigation.py  sitemap.py  tables.py  urls.py  views.py
netbox_ceph/api/: serializers.py  urls.py  views.py
netbox_ceph/migrations/: 0001_initial.py  0002_ceph_v2_foundation.py  0007_ceph_plan_bound_approvals.py  (+4 more)
release-notes/: index.html
scripts/: capture_screenshots.py
search/: search_index.json
sync/: index.html
tests/: conftest.py  netbox_test_configuration.py  test_choices_structure.py  test_ci_contract.py  test_desired_state_operations.py  test_migration_contract.py  test_migration_dependencies.py  test_operation_state_machine_django.py  test_orchestrator_contract.py  test_package.py  test_plan_approval_state_machine.py  test_redaction.py  test_v1_sync.py  test_v2_actions.py  test_v2_netbox_contract.py  test_v2_response_mapping.py
(+28 files in other folders)
